--- a/force-app/main/default/aura/VisitResultSharingItem/VisitResultSharingItem.cmp
+++ b/force-app/main/default/aura/VisitResultSharingItem/VisitResultSharingItem.cmp
@@ -25,7 +25,7 @@
                 <c:VisitResultSharingCountryLookup aura:id="countryLookup" value="{!v.visitResult.countryCodes}" isMultiEntry="true"
                                                    onchange="{!c.doCountryChanged}" onblur="{!c.doCountryChanged}"
                                                    placeholder="Select country" placeholderSelected="Select another country"
-                                                   ctpId="{!v.ctpId}" includeStates="true"/>
+                                                   ctpId="{!v.ctpId}" includeStates="false"/>
             </aura:if>
         </div>
     </div>
