--- a/force-app/main/default/layouts/Visit_Result_GroupM__mdt-Visit Result Group Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Visit_Result_GroupM__mdt-Visit Result Group Layout.layout-meta.xml
@@ -14,6 +14,14 @@
                 <behavior>Required</behavior>
                 <field>DeveloperName</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Required</behavior>
+                <field>Display_Order__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Required</behavior>
+                <field>Visit_Results_Mode__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
@@ -50,6 +58,8 @@
         <customLabel>false</customLabel>
         <detailHeading>false</detailHeading>
         <editHeading>false</editHeading>
+        <layoutColumns/>
+        <layoutColumns/>
         <layoutColumns/>
         <style>CustomLinks</style>
     </layoutSections>
