--- a/force-app/main/default/aura/RRSlider/RRSlider.cmp
+++ b/force-app/main/default/aura/RRSlider/RRSlider.cmp
@@ -12,7 +12,12 @@
     <aura:attribute name="showFilledTrack" type="Boolean" default="true"/>
     <aura:attribute name="disabled" type="Boolean" default="true"/>
 
+    <aura:attribute name="valueInBox" type="Double" default="0" access="private"/>
+    <aura:attribute name="showFilledTrackPrivate" type="Boolean" default="true" access="private"/>
     <aura:attribute name="hidden" type="Boolean" default="false" access="private"/>
+    <aura:attribute name="showValueBox" type="Boolean" default="true" access="private"/>
+    <aura:attribute name="showKnob" type="Boolean" default="true" access="private"/>
+    <aura:attribute name="rendered" type="Boolean" default="false" access="private"/>
 
     <!-- HANDLERS -->
 
@@ -21,15 +26,15 @@
     <!-- COMPONENT BODY -->
 
     <div class="{!'rr-slider-panel ' + v.classes + (v.hidden ? ' hidden' : '')}">
-        <div aura:id="valueBox" style="left: 18.5%;" class="rr-slider-value-box">
-            {!v.value}
+        <div aura:id="valueBox" style="left: 18.5%;" class="{!'rr-slider-value-box' + (v.showValueBox ? '' : ' hidden')}">
+            {!v.valueInBox}
         </div>
         <div class="rr-slider-bar">
             <div aura:id="track" class="rr-slider-track">
                 <div style="width: 20%;" aura:id="track-filled"
-                     class="{!'rr-slider-track-filled' + (v.showFilledTrack ? '' : ' hidden')}"></div>
+                     class="{!'rr-slider-track-filled' + (v.showFilledTrackPrivate ? '' : ' hidden')}"></div>
             </div>
-            <div style="left: 20%;" aura:id="knob" class="rr-slider-knob"></div>
+            <div style="left: 20%;" aura:id="knob" class="{!'rr-slider-knob' + (v.showKnob ? '' : ' hidden')}"></div>
         </div>
     </div>
 
