--- a/force-app/main/default/aura/RRSlider/RRSlider.css
+++ b/force-app/main/default/aura/RRSlider/RRSlider.css
@@ -2,6 +2,7 @@
     width: 100%;
     height: 30px;
     padding: 10px;
+    position: relative;
 }
 
 .THIS .rr-slider-value-box {
@@ -16,8 +17,8 @@
     font-size: 16px;
     line-height: 32px;
     text-align: center;
-    position: relative;
-    margin-bottom: 5px;
+    position: absolute;
+    margin: 0 0 5px 10px;
     z-index: 1000;
 }
 
@@ -26,6 +27,7 @@
     position: relative;
     height: 15px;
     padding: 6px 0;
+    top: 35px;
 }
 
 .THIS .rr-slider-track {
