--- a/force-app/main/default/aura/VisitResultsContainer/VisitResultsContainer.cmp
+++ b/force-app/main/default/aura/VisitResultsContainer/VisitResultsContainer.cmp
@@ -7,9 +7,9 @@
 
     <aura:attribute name="labResultsMode" type="String" default="Vitals"/>
 
-    <aura:attribute name="visitResultsGroupNames" type="String[]" access="private"/>
-    <aura:attribute name="labResultModeVitals" type="String" access="private" default="Vitals"/>
+    <aura:attribute name="initData" type="VisitResultsRemote.InitDataWrapper" access="private"/>
     <aura:attribute name="initialized" type="Boolean" access="private" default="false"/>
+    <aura:attribute name="labResultModeVitals" type="String" access="private" default="Vitals"/>
 
     <!-- HANDLERS -->
 
@@ -19,16 +19,28 @@
     <!-- COMPONENT BODY -->
 
     <div class="visit-results-content">
+
         <c:RRSpinner aura:id="mainSpinner" showSpinner="true" size="medium" fixed="true"/>
+
         <aura:if isTrue="{!v.initialized}">
-            <div class="visit-results-disclaimer">
-                {!$Label.c.Visit_Results_Tab_Disclaimer}
-            </div>
-            <aura:iteration items="{!v.visitResultsGroupNames}" var="visitResultsGroupName">
-                <c:VisitResultsPanel visitResultGroupName="{!visitResultsGroupName}"
-                                     isVitals="{!v.labResultsMode == v.labResultModeVitals}"
-                />
-            </aura:iteration>
+
+            <aura:if isTrue="{!and(v.initData.contact.Visit_Results_Opt_In__c, !v.initData.isDataMissed)}">
+                <div class="visit-results-disclaimer">
+                    {!$Label.c.Visit_Results_Tab_Disclaimer}
+                </div>
+                <aura:iteration items="{!v.initData.visitResultsGroupNames}" var="visitResultsGroupName">
+                    <c:VisitResultsPanel visitResultGroupName="{!visitResultsGroupName}"
+                                         isVitals="{!v.labResultsMode == v.labResultModeVitals}"
+                    />
+                </aura:iteration>
+
+                <aura:set attribute="else">
+                    <c:VisitsCompliance contactId="{!v.initData.contact.Id}"
+                                        isOptIn="{!v.initData.contact.Visit_Results_Opt_In__c}"
+                                        isEmpty="{!v.initData.isDataMissed}"/>
+                </aura:set>
+            </aura:if>
+
         </aura:if>
     </div>
 
