--- a/force-app/main/default/aura/VisitResultsItem/VisitResultsItem.cmp
+++ b/force-app/main/default/aura/VisitResultsItem/VisitResultsItem.cmp
@@ -8,18 +8,24 @@
     <aura:attribute name="wrapper" type="VisitResultsService.VisitResultWrapper"/>
     <aura:attribute name="isVitals" type="Boolean" default="false"/>
 
+    <aura:attribute name="showExpectedRange" type="Boolean" default="true" access="private"/>
+
     <!-- HANDLERS -->
+
+    <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
 
     <!-- COMPONENT BODY -->
 
     <div class="visit-result-item-panel">
-        <div class="visit-result-name">
-            {!v.wrapper.name}
+        <div class="visit-result-name-container">
+            <div class="visit-result-name">
+                {!v.wrapper.name}
+            </div>
         </div>
         <div class="visit-result-slider">
             <c:RRSlider value="{!v.wrapper.value}" minValue="{!v.wrapper.minValue}" maxValue="{!v.wrapper.maxValue}"
                         showFilledTrack="{!!v.isVitals}"/>
-            <div class="{!v.isVitals ? 'hidden' : 'visit-result-range'}">
+            <div class="{!v.showExpectedRange ? 'visit-result-range' : 'hidden'}">
                 {!$Label.c.Visit_Results_Tab_Expected_Range + ': ' + v.wrapper.minValue + '-' + v.wrapper.maxValue + ' ' + v.wrapper.measurement}
             </div>
         </div>
