--- a/force-app/main/default/aura/VisitResultsPanel/VisitResultsPanel.css
+++ b/force-app/main/default/aura/VisitResultsPanel/VisitResultsPanel.css
@@ -1,6 +1,7 @@
 .THIS.visit-result-panel {
     min-height: 200px;
     padding: 15px 10px 15px 15px;
+    position: relative;
 }
 
 .THIS .visit-result-panel-title {
