--- a/force-app/main/default/aura/StudyDetailView/StudyDetailView.cmp
+++ b/force-app/main/default/aura/StudyDetailView/StudyDetailView.cmp
@@ -87,7 +87,7 @@
                     </aura:if>
                 </div>
 
-<!--                <div class="rr-all-content sticky-bar" id="stickyPositionTarget">-->
+                <!--                <div class="rr-all-content sticky-bar" id="stickyPositionTarget">-->
 <!--                    <c:RRAnchor aura:id="tabsTarget"/>-->
 <!--                    <aura:if isTrue="{!!empty(v.studyDetail.tabs)}">-->
 <!--                        <div class="tabs">-->
@@ -142,58 +142,58 @@
 <!--                        &lt;!&ndash;<aura:if isTrue="{!v.userMode == 'HCP'}">-->
 <!--                            <button class="apollo-btn text" data-anchor="studySitesAnchor" onclick="{!c.doScrollInto}">{!$Label.c.PG_VP_L_Study_sites}</button>-->
 
-                        </aura:if> -->
-                        <aura:if isTrue="{!v.userMode == 'Participant'}">
-                            <button class="apollo-btn text" data-anchor="studySiteAnchor" onclick="{!c.doScrollInto}">{!$Label.c.PG_VP_L_Study_site}</button>
-                        </aura:if>
-                        <!-- PI -->
-                        <aura:if isTrue="{!v.userMode == 'PI'}">
-                            <button class="apollo-btn text" data-anchor="referringClinicsAnchor" onclick="{!c.doScrollInto}">{!$Label.c.PG_DBPI_L_Referring_clinics}</button>
-                        </aura:if>
-                    </div>
+<!--                        </aura:if> -->
+<!--                        <aura:if isTrue="{!v.userMode == 'Participant'}">-->
+<!--                            <button class="apollo-btn text" data-anchor="studySiteAnchor" onclick="{!c.doScrollInto}">{!$Label.c.PG_VP_L_Study_site}</button>-->
+<!--                        </aura:if>-->
+<!--                        &lt;!&ndash; PI &ndash;&gt;-->
+<!--                        <aura:if isTrue="{!v.userMode == 'PI'}">-->
+<!--                            <button class="apollo-btn text" data-anchor="referringClinicsAnchor" onclick="{!c.doScrollInto}">{!$Label.c.PG_DBPI_L_Referring_clinics}</button>-->
+<!--                        </aura:if>-->
+<!--                    </div>-->
 
-                    <div class="{!'links rr-width-limiter side-padding' + if(v.currentTab == 'tab-visits', '', ' collapsed')}">
-                        <button id="changeVisitMode" data-visit-mode="Current"
-                                class="{!'apollo-btn text ' + if(v.visitMode == 'Current', ' current', '')}"
-                                onclick="{!c.doAction}">{!$Label.c.Home_Page_StudyVisit_Tab_Study_Visits}</button>
-                        <button id="changeVisitMode" data-visit-mode="Past"
-                                class="{!'apollo-btn text ' + if(v.visitMode == 'Past', ' current', '')}"
-                                onclick="{!c.doAction}">{!$Label.c.Home_Page_StudyVisit_Tab_Past_Visits}</button>
-                    </div>
+<!--                    <div class="{!'links rr-width-limiter side-padding' + if(v.currentTab == 'tab-visits', '', ' collapsed')}">-->
+<!--                        <button id="changeVisitMode" data-visit-mode="Current"-->
+<!--                                class="{!'apollo-btn text ' + if(v.visitMode == 'Current', ' current', '')}"-->
+<!--                                onclick="{!c.doAction}">{!$Label.c.Home_Page_StudyVisit_Tab_Study_Visits}</button>-->
+<!--                        <button id="changeVisitMode" data-visit-mode="Past"-->
+<!--                                class="{!'apollo-btn text ' + if(v.visitMode == 'Past', ' current', '')}"-->
+<!--                                onclick="{!c.doAction}">{!$Label.c.Home_Page_StudyVisit_Tab_Past_Visits}</button>-->
+<!--                    </div>-->
 
-                    <div class="{!'links rr-width-limiter side-padding' + if(v.currentTab == 'tab-tasks', '', ' collapsed')}">
-                        <button id="changeTaskMode" data-task-mode="Open" value="Pending"
-                                class="{!'apollo-btn text ' + if(v.taskMode == 'Open', ' current', '')}"
-                                onclick="{!c.doAction}">{!$Label.c.Task_Tab_Open_Tasks}</button>
-                        <button id="changeTaskMode" data-task-mode="Completed" value="Pending"
-                                class="{!'apollo-btn text ' + if(v.taskMode == 'Completed', ' current', '')}"
-                                onclick="{!c.doAction}">{!$Label.c.Task_Tab_Completed_Tasks}</button>
-                    </div>
+<!--                    <div class="{!'links rr-width-limiter side-padding' + if(v.currentTab == 'tab-tasks', '', ' collapsed')}">-->
+<!--                        <button id="changeTaskMode" data-task-mode="Open" value="Pending"-->
+<!--                                class="{!'apollo-btn text ' + if(v.taskMode == 'Open', ' current', '')}"-->
+<!--                                onclick="{!c.doAction}">{!$Label.c.Task_Tab_Open_Tasks}</button>-->
+<!--                        <button id="changeTaskMode" data-task-mode="Completed" value="Pending"-->
+<!--                                class="{!'apollo-btn text ' + if(v.taskMode == 'Completed', ' current', '')}"-->
+<!--                                onclick="{!c.doAction}">{!$Label.c.Task_Tab_Completed_Tasks}</button>-->
+<!--                    </div>-->
 
-                    <div class="{!'links rr-width-limiter side-padding' + if(v.currentTab == 'tab-resources', '', ' collapsed')}">
-                        <aura:if isTrue="{!v.state != 'ALUMNI'}">
-                            <button id="changeResourceMode" data-resource-mode="Documents"
-                                    class="{!'apollo-btn text ' + if(v.resourceMode == 'Documents', ' current', '')}"
-                                    onclick="{!c.doAction}">{!$Label.c.Resource_Tab_Study_Documents}</button>
-                        </aura:if>
-                        <button id="changeResourceMode" data-resource-mode="Default"
-                                class="{!'apollo-btn text ' + if(v.resourceMode == 'Default', ' current', '')}"
-                                onclick="{!c.doAction}">{!$Label.c.Resource_Tab_Study_Video_And_Articles}</button>
-                        <button id="changeResourceMode" data-resource-mode="Favorite"
-                                class="{!'apollo-btn text ' + if(v.resourceMode == 'Favorite', ' current', '')}"
-                                onclick="{!c.doAction}">{!$Label.c.Resource_Tab_Favorites}</button>
-                    </div>
+<!--                    <div class="{!'links rr-width-limiter side-padding' + if(v.currentTab == 'tab-resources', '', ' collapsed')}">-->
+<!--                        <aura:if isTrue="{!v.state != 'ALUMNI'}">-->
+<!--                            <button id="changeResourceMode" data-resource-mode="Documents"-->
+<!--                                    class="{!'apollo-btn text ' + if(v.resourceMode == 'Documents', ' current', '')}"-->
+<!--                                    onclick="{!c.doAction}">{!$Label.c.Resource_Tab_Study_Documents}</button>-->
+<!--                        </aura:if>-->
+<!--                        <button id="changeResourceMode" data-resource-mode="Default"-->
+<!--                                class="{!'apollo-btn text ' + if(v.resourceMode == 'Default', ' current', '')}"-->
+<!--                                onclick="{!c.doAction}">{!$Label.c.Resource_Tab_Study_Video_And_Articles}</button>-->
+<!--                        <button id="changeResourceMode" data-resource-mode="Favorite"-->
+<!--                                class="{!'apollo-btn text ' + if(v.resourceMode == 'Favorite', ' current', '')}"-->
+<!--                                onclick="{!c.doAction}">{!$Label.c.Resource_Tab_Favorites}</button>-->
+<!--                    </div>-->
 
-                    <div class="{!'links rr-width-limiter side-padding' + if(v.currentTab == 'tab-lab-results', '', ' collapsed')}">
-                        <button id="changeLabResultsMode" data-lab-results-mode="Vitals"
-                                class="{!'apollo-btn text ' + if(v.labResultsMode == 'Vitals', ' current', '')}"
-                                onclick="{!c.doAction}">{!$Label.c.Visit_Results_Tab_Vitals}</button>
-                        <button id="changeLabResultsMode" data-lab-results-mode="Labs"
-                                class="{!'apollo-btn text ' + if(v.labResultsMode == 'Labs', ' current', '')}"
-                                onclick="{!c.doAction}">{!$Label.c.Visit_Results_Tab_Labs}</button>
-                    </div>
+<!--                    <div class="{!'links rr-width-limiter side-padding' + if(v.currentTab == 'tab-lab-results', '', ' collapsed')}">-->
+<!--                        <button id="changeLabResultsMode" data-lab-results-mode="Vitals"-->
+<!--                                class="{!'apollo-btn text ' + if(v.labResultsMode == 'Vitals', ' current', '')}"-->
+<!--                                onclick="{!c.doAction}">{!$Label.c.Visit_Results_Tab_Vitals}</button>-->
+<!--                        <button id="changeLabResultsMode" data-lab-results-mode="Labs"-->
+<!--                                class="{!'apollo-btn text ' + if(v.labResultsMode == 'Labs', ' current', '')}"-->
+<!--                                onclick="{!c.doAction}">{!$Label.c.Visit_Results_Tab_Labs}</button>-->
+<!--                    </div>-->
 
-                </div>
+<!--                </div>-->
                 <!-- Stub visible only when sticky bar fixed-->
                 <div>
                     <div class="height-stub" style="height: 62px"></div>
