Check address feature

--- a/force-app/main/default/aura/StudyListView/StudyListView.cmp
+++ b/force-app/main/default/aura/StudyListView/StudyListView.cmp
@@ -31,12 +31,19 @@
     <aura:attribute name="currentPageList" type="List"/>
     <aura:attribute name="skipUpdate" type="Boolean" default="false" access="private"/>
     <aura:attribute name="accessUserLevel" type="String"/>
+    <aura:attribute name="statesByCountryMap" type="Object"/>
+    <aura:attribute name="countriesMap" type="Object"/>
+    <aura:attribute name="countryCodesMap" type="Object"/>
+    <aura:attribute name="checkedAccountWasCreated" type="Boolean" default="false"/>
+    <aura:attribute name="showPopUpSpinner" type="Boolean" default="false"/>
+    <aura:attribute name="accountWithCheckedLocation" type="Object"/>
 
     <aura:handler name="change" value="{!v.paginationData.pageRecordsCount}"
                   action="{!c.doUpdateRecordsWithFirstPage}"/>
     <aura:handler name="change" value="{!v.paginationData.currentPage}" action="{!c.doUpdateRecords}"/>
     <aura:handler name="change" value="{!v.filterData}" action="{!c.doUpdateRecordsWithFirstPage}"/>
     <aura:handler name="change" value="{!v.sortData}" action="{!c.doUpdateRecordsWithFirstPage}"/>
+    <aura:handler name="change" value="{!v.currentTab}" action="{!c.clampTitle}"/>
 
     <!-- Handlers: -->
     <aura:handler event="c:EventCommunityInitialized" action="{!c.doInit}"/>
@@ -52,6 +59,10 @@
     <aura:method name="saveSSnewAddress" action="{!c.saveSSnewAddress}" access="public">
         <aura:attribute name="currentSS" type="Object"/>
     </aura:method>
+    <aura:method name="insertAccountForCheck" action="{!c.insertAccountForCheck}" access="public">
+        <aura:attribute name="currentAccount" type="Object"/>
+    </aura:method>
+    <aura:method name="removeCheckAccount" action="{!c.removeCheckAccount}" access="public"/>
 
     <!-- component body: -->
     <c:RRSpinner aura:id="mainSpinner" size="medium" showSpinner="{!v.showSpinner}" fixed="true"/>
@@ -147,7 +158,12 @@
                                                  userMode="{!v.userMode}"
                                                  parent="{!this}"
                                                  contactAccounts="{!v.contactAccountsList}"
-                                                 countryPicklist = "{!v.countryPicklist}"/>
+                                                 countryPicklist = "{!v.countryPicklist}"
+                                                 statesByCountryMap="{!v.statesByCountryMap}"
+                                                 countriesMap="{!v.countriesMap}"
+                                                 countryCodesMap="{!v.countryCodesMap}"
+                                                 checkedAccountWasCreated= "{!v.checkedAccountWasCreated}"
+                                                 accountWithCheckedLocation="{!v.accountWithCheckedLocation}"/>
                         </aura:iteration>
                     </aura:iteration>
                 </aura:if>
@@ -158,7 +174,9 @@
                     <aura:if isTrue="{! !empty(v.trialsNoLongerRecruiting)}">
                         <div class="slv-category">{!$Label.c.PG_MRRL_L_Studies}</div>
                         <aura:iteration items="{!v.trialsNoLongerRecruiting}" var="trial">
-                            <c:StudyListViewItem currentStudy="{!trial}" userMode="{!v.userMode}" parent="{!this}" delegatePicklist="{!v.delegatesPicklist}" contactAccounts="{!v.contactAccountsList}"/>
+                            <c:StudyListViewItem currentStudy="{!trial}" userMode="{!v.userMode}" parent="{!this}" delegatePicklist="{!v.delegatesPicklist}" contactAccounts="{!v.contactAccountsList}"
+                                                 countryPicklist = "{!v.countryPicklist}" statesByCountryMap="{!v.statesByCountryMap}" countriesMap="{!v.countriesMap}"
+                                                 countryCodesMap="{!v.countryCodesMap}" checkedAccountWasCreated= "{!v.checkedAccountWasCreated}"     accountWithCheckedLocation="{!v.accountWithCheckedLocation}"/>
                         </aura:iteration>
                     </aura:if>
                 </aura:if>
