--- a/force-app/main/default/aura/StudyListViewItem/StudyListViewItem.css
+++ b/force-app/main/default/aura/StudyListViewItem/StudyListViewItem.css
@@ -18,6 +18,23 @@
     padding-right: 17px;
 }
 
+.THIS .slds-spinner{
+    position: unset;
+}
+
+.THIS .slds-spinner_xx-small{
+    width:10px;
+    margin-top:1.4%;
+}
+
+.THIS .address-indicator-label{
+    margin-left:5px;
+}
+
+.THIS .address-spinner-indicator-container{
+    margin-left:10px;
+}
+
 
 .THIS .slvi-name-section,
 .THIS .slvi-objective-section {
@@ -266,6 +283,7 @@
 .THIS .popup-account-name{
     width:100%;
     margin-bottom:1%;
+    padding-left:1%;
 }
 
 .THIS .popup-account-name:first-child{
@@ -441,7 +459,7 @@
 }
 
 .THIS  .popup-address-inputs{
-    padding: 16px 8px;
+    padding: 16px 8px 0px 8px;
 }
 
 .THIS .manage-location-info{
@@ -597,5 +615,11 @@
 
 .THIS #addNewLocation .plus-location-icon{
     fill: #297DFD;
+}
+
+.THIS .check-address-btn{
+    margin-top:25px;
+    padding:9px 7px;
+    max-height: 44px;
 }
 
